<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.example.android.effectivenavigation="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/view_people"
        android:title="@string/view_people"
        com.example.android.effectivenavigation:showAsAction="never"/>
    <item
        android:id="@+id/playlist"
        android:title="@string/playlist"
        com.example.android.effectivenavigation:showAsAction="never"/>
        <item
        android:id="@+id/add_songs"
        android:title="@string/add_songs"
        com.example.android.effectivenavigation:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        com.example.android.effectivenavigation:showAsAction="never"/>

</menu>