<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/profile" style="@style/profile_about_section_title" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/card_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/name_bt" android:background="@drawable/touch_clear_bg" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/setting_section_height">
            <TextView android:text="@string/signup_name_title" style="@style/section_item_label" />
            <TextView android:id="@+id/name" style="@style/section_item_meta" />
        </RelativeLayout>
        <View style="@style/section_item_divider" />
        <RelativeLayout android:id="@+id/username_bt" android:background="@drawable/touch_clear_bg" android:layout_width="fill_parent" android:layout_height="@dimen/setting_section_height">
            <TextView android:text="@string/signup_username_title" style="@style/section_item_label" />
            <TextView android:textStyle="normal" android:visibility="gone" android:text="@string/pinterest_url" android:layout_toLeftOf="@+id/username" style="@style/section_item_meta" />
            <TextView android:id="@+id/username" style="@style/section_item_meta" />
        </RelativeLayout>
        <View style="@style/section_item_divider" />
        <RelativeLayout android:id="@+id/email_bt" android:background="@drawable/touch_clear_bg" android:layout_width="fill_parent" android:layout_height="@dimen/setting_section_height">
            <TextView android:id="@+id/textView" android:text="@string/signup_email_title" style="@style/section_item_label" />
            <TextView android:ellipsize="end" android:gravity="right" android:id="@+id/email" android:maxLines="1" android:layout_toRightOf="@id/textView" android:layout_alignTop="@id/textView" style="@style/section_item_meta" />
        </RelativeLayout>
        <View style="@style/section_item_divider" />
        <RelativeLayout android:id="@+id/country_bt" android:background="@drawable/touch_clear_bg" android:layout_width="fill_parent" android:layout_height="@dimen/setting_section_height">
            <TextView android:text="@string/country" style="@style/section_item_label" />
            <TextView android:id="@+id/country" style="@style/section_item_meta" />
        </RelativeLayout>
        <View style="@style/section_item_divider" />
        <RelativeLayout android:id="@+id/language_bt" android:background="@drawable/touch_clear_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/setting_section_height">
            <TextView android:id="@+id/language_tv" android:text="@string/language" style="@style/section_item_label" />
            <TextView android:textSize="12.0dip" android:gravity="right" android:id="@+id/language" android:text="@string/use_device_language" android:layout_toRightOf="@id/language_tv" style="@style/section_item_meta" />
        </RelativeLayout>
        <View style="@style/section_item_divider" />
        <TextView android:gravity="center" android:id="@+id/change_pwd_bt" android:background="@drawable/touch_clear_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/setting_section_height" android:text="@string/change_your_password" style="@style/section_item_label" />
    </LinearLayout>
</merge>