<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_fragment_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/inactive_white" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap_5x" >

            <!-- Login Title -->

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/default_gap_3x"
                android:gravity="center_horizontal"
                android:text="@string/signup_title"
                android:textColor="@color/jooke_orange"
                android:textSize="@dimen/registration_title_size" />
            <!-- Username -->

            <EditText
                android:id="@+id/login_username_email_field"
                style="@style/Holo.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_title"
                android:layout_marginTop="@dimen/default_gap"
                android:background="@drawable/aa_holo_edit_text_black_selector"
                android:hint="@string/login_fullname_hint"
                android:inputType="textEmailAddress"
                android:maxLength="60"
                android:textColor="@color/jooke_orange" />
            <!-- Email -->

            <EditText
                android:id="@+id/login_email_field"
                style="@style/Holo.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_username_email_field"
                android:background="@drawable/aa_holo_edit_text_black_selector"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/jooke_orange" />

            <!-- Password -->

            <EditText
                android:id="@+id/login_password_field"
                style="@style/Holo.EditText"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ui_element_unit"
                android:layout_below="@id/login_email_field"
                android:layout_marginTop="-4.0dip"
                android:background="@drawable/aa_holo_edit_text_black_selector"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/jooke_orange" />

            <TextView
                android:id="@+id/signup_using_other_accounts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_field"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingTop="@dimen/default_gap_2x"
                android:text="@string/signup_using_other_accounts"
                android:textColor="@color/jooke_orange"
                android:textSize="@dimen/registration_textview_error_message_text_size" />

            <LinearLayout
                android:id="@+id/linearlayout_other_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_using_other_accounts"
                android:layout_marginTop="40dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/signup_facebook_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dip"
                    android:layout_weight="1.0"
                    android:src="@drawable/facebook42" />

                <ImageView
                    android:id="@+id/signup_twitter_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/twitter42" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearlayout_other_login"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:paddingTop="@dimen/default_gap_2x"
                android:text="@string/user_agreement"
                android:textColorLink="@android:color/black"
                android:textSize="@dimen/registration_textview_error_message_text_size" />
        </RelativeLayout>
    </ScrollView>

    <!--
         <Button
        android:id="@+id/log_in_button"
        style="@style/SignupContinueButton"
        android:text="@string/signup" />
    -->

</RelativeLayout>