<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_fragment_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/inactive_white" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

      <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap_5x" >

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/default_gap_3x"
                android:gravity="center_horizontal"
                android:text="@string/login_title"
                android:textColor="@color/jooke_blue"
                android:textSize="@dimen/registration_title_size" />

            <EditText
                android:id="@+id/login_email_field"
                style="@style/Holo.EditText"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ui_element_unit"
                android:layout_below="@id/login_title"
                android:layout_marginTop="@dimen/default_gap"
                android:background="@drawable/aa_holo_edit_text_black_selector"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/jooke_blue"
                android:maxLength="60" />


            <EditText
                android:id="@+id/login_password_field"
                style="@style/Holo.EditText"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ui_element_unit"
                android:layout_below="@id/login_email_field"
                android:layout_marginTop="-4.0dip"
                android:textColor="@color/jooke_blue"
                android:background="@drawable/aa_holo_edit_text_black_selector"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />

           
            <TextView
                android:id="@+id/login_using_other_accounts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_field"
                android:gravity="center"
                android:paddingTop="@dimen/default_gap_2x"
                android:text="@string/login_using_other_accounts"
                android:textColor="@color/jooke_blue"
                android:textSize="@dimen/registration_textview_error_message_text_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_below="@id/login_using_other_accounts"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/login_facebook_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dip"
                    android:layout_weight="1.0"
                    android:src="@drawable/facebook42_blue" />

                <ImageView
                    android:id="@+id/login_twitter_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/twitter42_blue" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_continue_progressbar"
        android:layout_width="@dimen/ui_element_unit"
        android:layout_height="@dimen/ui_element_unit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/default_gap"
        android:visibility="invisible" />

</RelativeLayout>